temperature monitoring step 1+2
